...
    'India': 'INR',        // Indian Rupee
    'Indonesia': 'IDR',    // Indonesian Rupiah
    'Iran': 'IRR',         // Iranian Rial
    'Iraq': 'IQD',         // Iraqi Dinar
    'Ireland': 'EUR',      // Euro
    'Israel': 'ILS',       // Israeli New Shekel
    'Italy': 'EUR',        // Euro
    'Ivory Coast (Côte d\'Ivoire)': 'XOF', // West African CFA Franc
    'Jamaica': 'JMD',      // Jamaican Dollar
    'Japan': 'JPY',        // Japanese Yen
    'Jordan': 'JOD',       // Jordanian Dinar
    'Kazakhstan': 'KZT',   // Kazakhstani Tenge
    'Kenya': 'KES',        // Kenyan Shilling
...
